feature: template white/black list for dirs

--- a/example/myframe/docker-compose.yml.j2
+++ b/example/myframe/docker-compose.yml.j2
@@ -7,6 +7,10 @@ services:
       - source: www
         target: /var/lib/www
         type: imka
+        template:
+          enabled: true
+          white_list:
+            - templated_file.conf.j2
       - source: conf.j2
         target: /etc/nginx/conf
         type: imka
